javascript-pages update

--- a/main/objects/dj3/test.htm
+++ b/main/objects/dj3/test.htm
@@ -21,8 +21,7 @@
     }
 
     .node:hover {
-      stroke-width: 4px; /* Increase the border width on hover */
-      stroke: #87AFC7;
+      r: 25; /* Increase the circle radius on hover */
     }
 
     .node text {
